# Dataset-Generator

./: .env.bedrock.example  .gitignore  ANALYSIS.md  DECISION.md  Dockerfile  Dockerfile.ollama-gpu  Dockerfile.service  README.md  config.yaml  docker-compose.yml  main.py  pyproject.toml  requirements.txt  s3_upload.py
config/: config.yaml  model_config.yaml
docs/: ARCHITECTURE.md  README.md  azure-openai-setup.md  bedrock-anthropic-setup.md
docs/modules/: batch_generation.md  config.md  data_source.md  post_processor.md  prompt_processor.md  providers.md  storage_manager.md
docs/operations/: runbook.md
docs/plans/: proprietary-llm-architecture.md
scripts/: ollama-entrypoint.sh
src/: main.py
src/api/: routes.py  routes_v1.py
src/core/: config.py  data_generator.py  data_source.py  dspy_generation.py  metrics.py  model_client.py  post_processor.py  post_processor_factory.py  prompt_processor.py  storage_manager.py  template_registry.py
src/core/providers/: azure_openai.py  base.py  bedrock_anthropic.py  factory.py  ollama.py
src/evals/: README.md  agency_confusion_analysis.py  constants.py  eval_config.yaml  evaluation_pipeline.py  information_coverage.py  length_appropriateness.py  llm_based_quality_scoring.py  llm_topic_agency_analysis.py  query_diversity_score.py  redundancy_penalty.py  relevance_score.py  topic_coverage_score.py  topic_modeling_based_score.py  utils.py
src/utils/: logger.py  mlflow_tracking.py  validators.py
user_configs/prompts/: institute_topic_conversation.txt  institute_topic_question.txt
