[project]
name = "dataset-generator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.115.12",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "loguru==0.7.3",
    "pydantic==2.11.3",
    "python-multipart>=0.0.20",
    "pyyaml>=6.0.2",
    "requests==2.32.4",
    "uvicorn==0.34.2",
]
