[project]
name = "dataset-generator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.10"
dependencies = [
    "fastapi>=0.115.12",
    "uvicorn>=0.34.2",
    "pydantic>=2.11.3",
    "requests>=2.32.4",
    "python-multipart",
    "pyyaml>=6.0.1",
    "jinja2>=3.1.6",
    "loguru>=0.7.3",
    "httpx>=0.28.1",
    "scikit-learn>=1.6.1",
    "numpy>=1.26.4",
    "sentence-transformers>=5.1.2",
    "nltk>=3.9.2",
    "langchain>=0.3.8",
    "langchain-aws>=0.2.4",
    "langchain-openai>=0.2.9",
    "boto3>=1.35.87",
    "tenacity>=9.0.0",
    "redis>=4.6.0",
]
